# MaterialX

./: CMakeLists.txt  JsMaterialXCore.wasm  JsMaterialXGenShader.data  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm
libraries/: CMakeLists.txt
python/: CMakeLists.txt
python/Scripts/: generateshader.py
source/MaterialXGenOsl/: OslShaderGenerator.cpp  OslSyntax.cpp
source/MaterialXGenOslNodes/: CMakeLists.txt  LibsToOso.cpp  OslNodesShaderGenerator.cpp  OslNodesShaderGenerator.h  OslNodesSyntax.cpp
source/MaterialXGenShader/: GenOptions.h  ShaderNode.cpp  ShaderNode.h  ShaderStage.cpp  TypeDesc.cpp  TypeDesc.h
source/MaterialXRenderOsl/: OslRenderer.cpp  OslRenderer.h
source/MaterialXTest/: CMakeLists.txt
source/MaterialXTest/MaterialXRenderOsl/: RenderOsl.cpp
source/MaterialXView/: CMakeLists.txt  Viewer.cpp
source/PyMaterialX/: CMakeLists.txt
source/PyMaterialX/PyMaterialXCore/: CMakeLists.txt
source/PyMaterialX/PyMaterialXFormat/: CMakeLists.txt
source/PyMaterialX/PyMaterialXGenGlsl/: CMakeLists.txt
source/PyMaterialX/PyMaterialXGenMdl/: CMakeLists.txt
source/PyMaterialX/PyMaterialXGenOsl/: CMakeLists.txt
source/PyMaterialX/PyMaterialXGenOslNodes/: PyOslNodesShaderGenerator.cpp
source/PyMaterialX/PyMaterialXGenShader/: CMakeLists.txt
source/PyMaterialX/PyMaterialXRender/: CMakeLists.txt
source/PyMaterialX/PyMaterialXRenderGlsl/: CMakeLists.txt
source/PyMaterialX/PyMaterialXRenderOsl/: CMakeLists.txt
